--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,16 @@ open_graph:
   image: /assets/images/profile.png   # open graph image path
 
 # Style
-text_direction: ltr         # text direction, 'ltr' or 'rtl'
-date_format: "%Y-%m-%d"     # date format
-theme_color: "#1DA1F2"      # your favorite theme color
-contact_delimiter: "·"      # contact delimiter, '·', '/' or '|'
-section_icon: true          # section title icon, true or false
-section_title: uppercase    # section title style, 'uppercase', 'lowercase', 'capitalize' or 'none'
-section_align: start        # section title align, 'start', 'end' or 'center'
-section_line: dashed        # section title line, 'solid', 'dashed' or 'none'
-section_background: false   # section title backound, 'true' or 'false'
-skill_level_icon: lightbulb # skill rate icon, 'heart', 'star', 'circle' or 'lightbulb'
-link_icon: true             # show link icon, 'true' or 'false'
-site_footer: true           # show site footer, 'true' or 'false'
+text_direction: ltr
+date_format: "%Y-%m-%d"
+theme_color: "#1DA1F2"
+contact_delimiter: "·"
+section_icon: true
+section_title: uppercase
+section_align: start
+section_line: dashed
+section_background: false
+skill_level_icon: lightbulb
+link_icon: true
+site_footer: true
+
